created orderservice to convert orders to xml.

--- a/MondialeVGL.OrderProcessor/MondialeVGL.OrderProcessor.csproj
+++ b/MondialeVGL.OrderProcessor/MondialeVGL.OrderProcessor.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MondialeVGL.OrderProcessor.Repository\MondialeVGL.OrderProcessor.Repository.csproj" />
+    <ProjectReference Include="..\MondialeVGL.OrderProcessor.Services\MondialeVGL.OrderProcessor.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
