added unit test for bad input data handling.

--- a/MondialeVGL.OrderProcessor.UnitTests/MondialeVGL.OrderProcessor.UnitTests.csproj
+++ b/MondialeVGL.OrderProcessor.UnitTests/MondialeVGL.OrderProcessor.UnitTests.csproj
@@ -37,6 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Interface Data - Bad Data.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Interface Data.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
