--- a/MondialeVGL.OrderProcessor.Repository/MondialeVGL.OrderProcessor.Repository.csproj
+++ b/MondialeVGL.OrderProcessor.Repository/MondialeVGL.OrderProcessor.Repository.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="CsvHelper" Version="27.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MondialeVGL.OrderProcessor.Entities\MondialeVGL.OrderProcessor.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
